--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.2.4"
+django-tailwind = "^3.6.0"
 
 [tool.poetry.group.dev.dependencies]
 django-browser-reload = "^1.11.0"
