--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.4"
 django-tailwind = "^3.6.0"
+requests = "^2.31.0"
+aiohttp = "^3.8.5"
+django-hosts = "^5.2"
 
 [tool.poetry.group.dev.dependencies]
 django-browser-reload = "^1.11.0"
