--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ local_settings.py
 *.sqlite3
 db.sqlite3-journal
 media
-
+.vscode/
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -166,7 +166,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
